Update notebooks with corresponding updated styles

--- a/notebooks/packages/Day Ahead Auctions.ipynb
+++ b/notebooks/packages/Day Ahead Auctions.ipynb
@@ -36,7 +36,7 @@
     "TODAY = pd.to_datetime(dt.date.today(), utc=True)\n",
     "\n",
     "CURVE_UID = \"FWD_PWRTE_H_DA\"\n",
-    "PUBLISHED_AT = TODAY - pd.tseries.offsets.Day(20)"
+    "PUBLISHED_AT = TODAY - pd.tseries.offsets.Day(30)"
    ]
   },
   {
@@ -219,17 +219,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Display graph\n",
-    "\n",
-    "# wtd_fig"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,17 +247,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Display graph\n",
-    "\n",
-    "# mtd_fig"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -294,17 +272,6 @@
     ")\n",
     "\n",
     "qtd_fig = go.FigureWidget(data=qtd_data, layout=GO_LAYOUT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Display graph\n",
-    "\n",
-    "# qtd_fig"
    ]
   },
   {
@@ -393,7 +360,7 @@
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
