--- a/notebooks/packages/Portfolio Position Optimization.ipynb
+++ b/notebooks/packages/Portfolio Position Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,55 +85,6 @@
     "indices_df = npta.domain.products.collections.IndexSet.from_pandas(products_df).to_pandas()\n",
     "base_indices_df = indices_df[indices_df.intraday_delivery == \"BASE\"].calendar_delivery\n",
     "peak_indices_df = indices_df[indices_df.intraday_delivery == \"PEAK\"].calendar_delivery"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'label': 'D-20210602'},\n",
-       " {'label': 'D-20210603'},\n",
-       " {'label': 'D-20210604'},\n",
-       " {'label': 'D-20210605'},\n",
-       " {'label': 'D-20210606'},\n",
-       " {'label': 'D-20210607'},\n",
-       " {'label': 'WE-20210605'},\n",
-       " {'label': 'Week-20210607'},\n",
-       " {'label': 'Week-20210614'},\n",
-       " {'label': 'Week-20210621'},\n",
-       " {'label': 'Week-20210628'},\n",
-       " {'label': 'Jul-21'},\n",
-       " {'label': 'Aug-21'},\n",
-       " {'label': 'Sep-21'},\n",
-       " {'label': 'Oct-21'},\n",
-       " {'label': 'Nov-21'},\n",
-       " {'label': 'Dec-21'},\n",
-       " {'label': 'Q3-21'},\n",
-       " {'label': 'Q4-21'},\n",
-       " {'label': 'Q1-22'},\n",
-       " {'label': 'Q2-22'},\n",
-       " {'label': 'Q3-22'},\n",
-       " {'label': 'Q4-22'},\n",
-       " {'label': 'Q1-23'},\n",
-       " {'label': 'Q2-23'},\n",
-       " {'label': 'Q3-23'},\n",
-       " {'label': 'Cal-2022'},\n",
-       " {'label': 'Cal-2023'},\n",
-       " {'label': 'Cal-2024'},\n",
-       " {'label': 'Cal-2025'}]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_indices_df.to_frame().rename(columns={\"calendar_delivery\": \"label\"}).to_dict(orient=\"records\")"
    ]
   },
   {
@@ -154,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,60 +262,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dashboard sidebar\n",
     "\n",
-    "product_text = mdc.Typography(\n",
-    "    id=\"text-product\",\n",
-    "    text=\"Select products\",\n",
-    "    component=\"h3\",\n",
-    "    variant=\"h3\",\n",
-    ")\n",
     "base_dropdown = mdc.Dropdown(\n",
     "    id=\"dropdown-base\",\n",
-    "    labelText=\"BASE\",\n",
-    "    helperText=\"Select a baseload product\",\n",
-    "    options=base_indices_df.to_frame().rename(columns={\"calendar_delivery\": \"label\"}).to_dict(orient=\"records\"),\n",
+    "    labelText=\"Base\",\n",
+    "    width=180,\n",
+    "    options=base_indices_df.to_list(),\n",
     ")\n",
     "peak_dropdown = mdc.Dropdown(\n",
     "    id=\"dropdown-peak\",\n",
-    "    labelText=\"PEAK\",\n",
-    "    helperText=\"Select a peakload product\",\n",
-    "    options=peak_indices_df.to_frame().rename(columns={\"calendar_delivery\": \"label\"}).to_dict(orient=\"records\"),\n",
-    ")\n",
-    "product_box = mdc.Box(\n",
-    "    children=[product_text, base_dropdown, peak_dropdown],\n",
-    "    sx={\"m\": 2}\n",
+    "    labelText=\"Peak\",\n",
+    "    width=180,\n",
+    "    options=peak_indices_df.to_list(),\n",
     ")\n",
     "\n",
-    "strategy_text = mdc.Typography(\n",
-    "    id=\"text-strategy\",\n",
-    "    text=\"Select strategy\",\n",
-    "    component=\"h3\",\n",
-    "    variant=\"h3\",\n",
-    ")\n",
     "strategy_toggle = mdc.Toggle(\n",
     "    id=\"toggle-strategy\",\n",
-    "    options=[{'label': 'Volume'}, {'label': 'Value'}],\n",
-    "    orientation=\"vertical\",\n",
-    "    selected='volume',\n",
-    ")\n",
-    "strategy_box = mdc.Box(\n",
-    "    children=[strategy_text, strategy_toggle],\n",
-    "    sx={\"m\": 2},\n",
+    "    options=['Volume', 'Value'],\n",
     ")\n",
     "\n",
-    "divider = mdc.Divider()\n",
-    "\n",
-    "sidebar = mdc.SideBar(children=[product_box, divider, strategy_box])"
+    "sidebar = mdc.SideBar(\n",
+    "    children=[base_dropdown, peak_dropdown, strategy_toggle],\n",
+    "    settings=[\"Select product\", \"\", \"Select strategy\"],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,44 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n",
-      "127.0.0.1 - - [02/Jan/2022 23:04:52] \"GET /_shutdown_50332800-9e8c-448f-8559-2e9f72519e36 HTTP/1.1\" 200 -\n",
-      " * Running on all addresses.\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      " * Running on http://172.18.0.4:8001/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/Jan/2022 23:04:52] \"GET /_alive_50332800-9e8c-448f-8559-2e9f72519e36 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://0.0.0.0:8001/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "172.18.0.1 - - [02/Jan/2022 23:04:57] \"GET / HTTP/1.1\" 200 -\n",
-      "172.18.0.1 - - [02/Jan/2022 23:04:57] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "172.18.0.1 - - [02/Jan/2022 23:04:57] \"GET /_favicon.ico?v=2.0.0 HTTP/1.1\" 200 -\n",
-      "172.18.0.1 - - [02/Jan/2022 23:04:58] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "172.18.0.1 - - [02/Jan/2022 23:04:58] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 200 -\n",
-      "172.18.0.1 - - [02/Jan/2022 23:04:58] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "from dash.dependencies import Input, Output\n",
@@ -810,84 +705,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>asset</th>\n",
-       "      <th>calendar_delivery</th>\n",
-       "      <th>intraday_delivery</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PWRTE</td>\n",
-       "      <td>D-20210602</td>\n",
-       "      <td>PEAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PWRTE</td>\n",
-       "      <td>D-20210603</td>\n",
-       "      <td>PEAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PWRTE</td>\n",
-       "      <td>D-20210604</td>\n",
-       "      <td>PEAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PWRTE</td>\n",
-       "      <td>D-20210605</td>\n",
-       "      <td>PEAK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PWRTE</td>\n",
-       "      <td>D-20210606</td>\n",
-       "      <td>PEAK</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   asset calendar_delivery intraday_delivery\n",
-       "0  PWRTE        D-20210602              PEAK\n",
-       "1  PWRTE        D-20210603              PEAK\n",
-       "2  PWRTE        D-20210604              PEAK\n",
-       "3  PWRTE        D-20210605              PEAK\n",
-       "4  PWRTE        D-20210606              PEAK"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indices_df = npta.domain.products.collections.IndexSet.from_pandas(products_df).to_pandas()\n",
     "indices_df.head()"
