--- a/notebooks/packages/Wholesale Hedge Trades.ipynb
+++ b/notebooks/packages/Wholesale Hedge Trades.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "marked-terrain",
+   "id": "structured-jefferson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geographic-kingston",
+   "id": "prescription-values",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesser-tunnel",
+   "id": "linear-conclusion",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "joint-study",
+   "id": "suited-simon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-quarter",
+   "id": "sacred-funds",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-storage",
+   "id": "disciplinary-therapist",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "single-technician",
+   "id": "traditional-aaron",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-conjunction",
+   "id": "political-assessment",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "circular-comedy",
+   "id": "broke-chambers",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "anticipated-tyler",
+   "id": "necessary-bunch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incredible-conjunction",
+   "id": "dramatic-television",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earlier-dayton",
+   "id": "early-eight",
    "metadata": {},
    "source": [
     "# DASH"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dress-origin",
+   "id": "plain-graham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-extension",
+   "id": "central-houston",
    "metadata": {},
    "source": [
     "## LAYOUT"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ongoing-currency",
+   "id": "strange-forestry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "useful-jewelry",
+   "id": "identical-thanksgiving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sufficient-import",
+   "id": "saved-institution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "small-difference",
+   "id": "regional-daniel",
    "metadata": {},
    "source": [
     "## APP"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opening-kenya",
+   "id": "electronic-behalf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,13 +330,13 @@
     "        fig.data[3].visible=True\n",
     "    return [rows, fig]\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "literary-albany",
+   "id": "defined-organizer",
    "metadata": {},
    "outputs": [],
    "source": []
