--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "improving-baking",
+   "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statistical-builder",
+   "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
     "    options=[1, 2],\n",
-    "    orientation=\"vertical\",\n",
+    "    orientation=\"horizontal\",\n",
     "    selected=1,\n",
     ")\n",
     "text = mdc.Typography(\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imported-travel",
+   "id": "documented-raise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,7 @@
     "\n",
     "dropdown = mdc.Dropdown(\n",
     "    id=\"dropdown\",\n",
+    "    width=120,\n",
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    options=[\"test 1\", \"test 2\"],\n",
@@ -66,13 +67,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "final-guitar",
+   "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
    "source": [
     "tab = mdc.Tab(\n",
     "    children=[box, box_2],\n",
-    "    tabs=[{\"label\": \"toggle\"}, {\"label\": \"dropdown\"}]\n",
+    "    tabs=[{\"label\": \"Toggle\"}, {\"label\": \"Dropdown\"}]\n",
     ")\n",
     "section = mdc.Section(\n",
     "    orientation=\"columns\",\n",
@@ -89,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foster-association",
+   "id": "extra-kenya",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,13 +120,13 @@
     "    return \"Another content...\"\n",
     "\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "american-encoding",
+   "id": "featured-burning",
    "metadata": {},
    "outputs": [],
    "source": []
