--- a/notebooks/test_layout.ipynb
+++ b/notebooks/test_layout.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "remarkable-diploma",
+   "id": "everyday-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "analyzed-syndication",
+   "id": "subjective-secondary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-commission",
+   "id": "novel-gates",
    "metadata": {},
    "outputs": [],
    "source": [
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-prague",
+   "id": "residential-community",
    "metadata": {},
    "outputs": [],
    "source": []
