--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-access",
+   "id": "congressional-chile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closing-rugby",
+   "id": "annual-interview",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,14 @@
     "\n",
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
-    "    options=[{'label': '1'}, {'label': '2'}],\n",
-    "    selected='1',\n",
+    "    options=[1, 2],\n",
+    "    selected=1,\n",
     ")\n",
-    "sidebar = mdc.SideBar(children=toggle)\n",
+    "sidebar = mdc.SideBar(\n",
+    "    children=toggle,\n",
+    "    title=\"Settings\",\n",
+    "    settings=[\"Select choice\"],\n",
+    ")\n",
     "\n",
     "page = mdc.Page(orientation=\"columns\", children=section)\n",
     "navbar = mdc.NavBar(title=\"Custom dash\")\n",
@@ -59,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "married-mounting",
+   "id": "earned-particle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +76,7 @@
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_tabs(value):\n",
-    "    if value == '1':\n",
+    "    if value == 1:\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
@@ -82,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "terminal-shuttle",
+   "id": "hearing-football",
    "metadata": {},
    "outputs": [],
    "source": []
