--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-michael",
+   "id": "great-steam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "short-emergency",
+   "id": "hindu-script",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +49,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "north-press",
+   "id": "typical-population",
    "metadata": {},
    "outputs": [],
    "source": [
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sudden-venture",
+   "id": "thorough-practitioner",
    "metadata": {},
    "outputs": [],
    "source": []
