--- a/notebooks/packages/Short Term Markets.ipynb
+++ b/notebooks/packages/Short Term Markets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "international-tiffany",
+   "id": "immune-principal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detailed-biography",
+   "id": "enhanced-investigation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-reduction",
+   "id": "necessary-standard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confirmed-mumbai",
+   "id": "juvenile-tower",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honest-circular",
+   "id": "minor-bronze",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollow-country",
+   "id": "motivated-charm",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustained-lawsuit",
+   "id": "lined-thumb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mineral-blade",
+   "id": "serial-group",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expanded-lightning",
+   "id": "loved-climb",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tribal-pilot",
+   "id": "suffering-pricing",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-pension",
+   "id": "naughty-edward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "renewable-boundary",
+   "id": "productive-saying",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-rotation",
+   "id": "quarterly-elizabeth",
    "metadata": {},
    "source": [
     "## SECTION 2"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afraid-conviction",
+   "id": "wooden-christmas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-telephone",
+   "id": "professional-consolidation",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flexible-salon",
+   "id": "patient-destination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "annual-volunteer",
+   "id": "broken-default",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "terminal-encounter",
+   "id": "hungarian-olympus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exact-night",
+   "id": "scientific-rachel",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "geographic-nightlife",
+   "id": "insured-election",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "allied-vatican",
+   "id": "pointed-bennett",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brown-jackson",
+   "id": "precious-williams",
    "metadata": {},
    "source": [
     "# DASH COMPONENTS"
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "serious-upset",
+   "id": "alone-canvas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "possible-folder",
+   "id": "perceived-romance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "green-pointer",
+   "id": "constitutional-myrtle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,13 +472,13 @@
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001, debug=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "younger-triumph",
+   "id": "decent-internet",
    "metadata": {},
    "outputs": [],
    "source": []
