--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -24,9 +24,8 @@
     "\n",
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
-    "    options=[1, 2],\n",
+    "    options=[\"test a\", \"test b\"],\n",
     "    orientation=\"horizontal\",\n",
-    "    selected=1,\n",
     ")\n",
     "text = mdc.Typography(\n",
     "    id=\"text\",\n",
@@ -103,7 +102,7 @@
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_toggle(value):\n",
-    "    if value == 0:\n",
+    "    if value == \"test a\":\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
@@ -115,7 +114,7 @@
     "def update_dropdown(value):\n",
     "    if not value:\n",
     "        return \"No content...\"\n",
-    "    if 1 in value:\n",
+    "    if \"test 1\" in value:\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
     "\n",
@@ -134,7 +133,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
