Add date picker MDC component

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -25,7 +25,8 @@
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
     "    options=[\"test a\", \"test b\"],\n",
-    "    orientation=\"horizontal\",\n",
+    "    orientation=\"vertical\",\n",
+    "    selected=\"test b\",\n",
     ")\n",
     "text = mdc.Typography(\n",
     "    id=\"text\",\n",
@@ -52,6 +53,7 @@
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    options=[\"test 1\", \"test 2\"],\n",
+    "    selected=[\"test 1\"],\n",
     ")\n",
     "text_2 = mdc.Typography(\n",
     "    id=\"text-2\",\n",
@@ -66,13 +68,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a900805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test calendar\n",
+    "\n",
+    "calendar = mdc.Calendar(\n",
+    "    id=\"calendar\"\n",
+    ")\n",
+    "text_3 = mdc.Typography(\n",
+    "    id=\"text-3\",\n",
+    "    text=\"Content...\",\n",
+    "    component=\"p\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_3 = mdc.Box(children=[calendar, text_3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
    "source": [
     "tab = mdc.Tab(\n",
-    "    children=[box, box_2],\n",
-    "    tabs=[{\"label\": \"Toggle\"}, {\"label\": \"Dropdown\"}]\n",
+    "    children=[box, box_2, box_3],\n",
+    "    tabs=[{\"label\": \"Toggle\"}, {\"label\": \"Dropdown\"}, {\"label\": \"Calendar\"}]\n",
     ")\n",
     "section = mdc.Section(\n",
     "    orientation=\"columns\",\n",
@@ -117,6 +141,15 @@
     "    if \"test 1\" in value:\n",
     "        return \"Other content...\"\n",
     "    return \"Another content...\"\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-3', component_property='text'),\n",
+    "    Input(component_id='calendar', component_property='selected'),\n",
+    ")\n",
+    "def update_calendar(value):\n",
+    "    if not value:\n",
+    "        return \"No content...\"\n",
+    "    return value\n",
     "\n",
     "\n",
     "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
