Allow single or multiple dropdown components

--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -68,6 +68,7 @@
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    options=[\"test 1\", \"test 2\"],\n",
+    "    multiple=False,\n",
     "    selected=[\"test 1\"],\n",
     ")\n",
     "sidebar = mdc.SideBar(\n",
