Add slider input component

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -7,10 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jupyter_dash import JupyterDash\n",
-    "from dash.dependencies import Input, Output\n",
+    "import dash_mdc_neptune as mdc\n",
     "\n",
-    "import dash_mdc_neptune as mdc"
+    "from jupyter_dash import JupyterDash\n",
+    "from dash.dependencies import Input, Output"
    ]
   },
   {
@@ -24,14 +24,13 @@
     "\n",
     "toggle = mdc.Toggle(\n",
     "    id=\"toggle\",\n",
-    "    options=[\"test a\", \"test b\"],\n",
     "    orientation=\"vertical\",\n",
+    "    options=[\"test a\", \"test b\"],\n",
     "    selected=\"test b\",\n",
     ")\n",
     "text = mdc.Typography(\n",
     "    id=\"text\",\n",
     "    text=\"Content...\",\n",
-    "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
@@ -49,16 +48,16 @@
     "\n",
     "dropdown = mdc.Dropdown(\n",
     "    id=\"dropdown\",\n",
-    "    width=120,\n",
+    "    width=150,\n",
     "    labelText=\"test\",\n",
     "    helperText=\"test\",\n",
     "    options=[\"test 1\", \"test 2\"],\n",
-    "    selected=[\"test 1\"],\n",
+    "    multiple=True,\n",
+    "    selected=[\"test 2\"],\n",
     ")\n",
     "text_2 = mdc.Typography(\n",
     "    id=\"text-2\",\n",
-    "    text=\"Other content...\",\n",
-    "    component=\"p\",\n",
+    "    text=\"Content...\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
@@ -75,12 +74,17 @@
     "# Test calendar\n",
     "\n",
     "calendar = mdc.Calendar(\n",
-    "    id=\"calendar\"\n",
+    "    id=\"calendar\",\n",
+    "    width=150,\n",
+    "    labelText=\"test\",\n",
+    "    helperText=\"test\",\n",
+    "    minDate=\"2022-01-01\",\n",
+    "    disableFuture=True,\n",
+    "    selected=\"2022-05-01\",\n",
     ")\n",
     "text_3 = mdc.Typography(\n",
     "    id=\"text-3\",\n",
     "    text=\"Content...\",\n",
-    "    component=\"p\",\n",
     "    variant=\"body2\",\n",
     ")\n",
     "\n",
@@ -90,13 +94,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test slider\n",
+    "\n",
+    "slider = mdc.Slider(\n",
+    "    id=\"slider\",\n",
+    "    width=200,\n",
+    "    labelText=\"test\",\n",
+    "    minValue=-100,\n",
+    "    maxValue=100,\n",
+    "    stepValue=10,\n",
+    "    selected=50,\n",
+    "    marks=[\n",
+    "        {\"label\": \"-100\", \"value\": -100},\n",
+    "        {\"label\": \"-50\", \"value\": -50},\n",
+    "        {\"label\": \"0\", \"value\": 0},\n",
+    "        {\"label\": \"50\", \"value\": 50},\n",
+    "        {\"label\": \"100\", \"value\": 100},\n",
+    "    ],\n",
+    ")\n",
+    "text_4 = mdc.Typography(\n",
+    "    id=\"text-4\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_4 = mdc.Box(children=[slider, text_4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dashboard layout\n",
+    "\n",
     "tab = mdc.Tab(\n",
-    "    children=[box, box_2, box_3],\n",
-    "    tabs=[{\"label\": \"Toggle\"}, {\"label\": \"Dropdown\"}, {\"label\": \"Calendar\"}]\n",
+    "    children=[box, box_2, box_3, box_4],\n",
+    "    tabs=[\n",
+    "        {\"label\": \"Toggle\"},\n",
+    "        {\"label\": \"Dropdown\"},\n",
+    "        {\"label\": \"Calendar\"},\n",
+    "        {\"label\": \"Slider\"},\n",
+    "    ]\n",
     ")\n",
     "section = mdc.Section(\n",
     "    orientation=\"columns\",\n",
@@ -117,6 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dash app\n",
+    "\n",
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
@@ -126,9 +173,7 @@
     "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_toggle(value):\n",
-    "    if value == \"test a\":\n",
-    "        return \"Other content...\"\n",
-    "    return \"Another content...\"\n",
+    "    return value\n",
     "\n",
     "\n",
     "@app.callback(\n",
@@ -138,9 +183,8 @@
     "def update_dropdown(value):\n",
     "    if not value:\n",
     "        return \"No content...\"\n",
-    "    if \"test 1\" in value:\n",
-    "        return \"Other content...\"\n",
-    "    return \"Another content...\"\n",
+    "    return \", \".join(value)\n",
+    "\n",
     "\n",
     "@app.callback(\n",
     "    Output(component_id='text-3', component_property='text'),\n",
@@ -149,6 +193,14 @@
     "def update_calendar(value):\n",
     "    if not value:\n",
     "        return \"No content...\"\n",
+    "    return value\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-4', component_property='text'),\n",
+    "    Input(component_id='slider', component_property='selected'),\n",
+    ")\n",
+    "def update_slider(value):\n",
     "    return value\n",
     "\n",
     "\n",
