Update notebooks and use new dash api

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,12 @@
     "import dash_mdc_neptune as mdc\n",
     "\n",
     "from jupyter_dash import JupyterDash\n",
-    "from dash.dependencies import Input, Output"
+    "from dash import Input, Output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "featured-burning",
+   "id": "e0f7364b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
