--- a/notebooks/test_download.ipynb
+++ b/notebooks/test_download.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "everyday-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dash_core_components as dcc\n",
     "import dash_mdc_neptune as mdc\n",
     "\n",
-    "from dash.dependencies import Input, Output\n",
+    "from dash import dcc, Input, Output\n",
     "import jupyter_dash"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "subjective-secondary",
    "metadata": {},
    "outputs": [],
@@ -83,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "residential-community",
+   "id": "26f11796",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
