--- a/notebooks/test_sidebar.ipynb
+++ b/notebooks/test_sidebar.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "congressional-chile",
    "metadata": {},
    "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
-    "from dash.dependencies import Input, Output\n",
+    "from dash import Input, Output\n",
     "\n",
     "import dash_mdc_neptune as mdc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "annual-interview",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hearing-football",
+   "id": "bf35cc21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
