Create InputText component, optional inputText in slider
- Add optional showInputText to slider
- Update jupyter notebooks to test new components
- InputText allow types: text, integer, or float
- Validate inputText with regular expressions
- Add 'precision' prop to limit number of decimal places
- Add javascript unit tests for Slider and InputText using react testing-library and Jest
- Add 'yarn test' to package.json
- Add yarn test step to CI config

--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "\n",
     "slider = mdc.Slider(\n",
     "    id=\"slider\",\n",
-    "    width=200,\n",
+    "    width=300,\n",
     "    labelText=\"test\",\n",
     "    minValue=-100,\n",
     "    maxValue=100,\n",
@@ -115,6 +115,7 @@
     "        {\"label\": \"50\", \"value\": 50},\n",
     "        {\"label\": \"100\", \"value\": 100},\n",
     "    ],\n",
+    "    showInputText=True,\n",
     ")\n",
     "text_4 = mdc.Typography(\n",
     "    id=\"text-4\",\n",
@@ -127,7 +128,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "id": "2091a0c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test text input\n",
+    "\n",
+    "input_text = mdc.InputText(\n",
+    "    id=\"input-text\",\n",
+    "    labelText=\"text\",\n",
+    "    value=\"test\",\n",
+    "    multiline=True,\n",
+    "    maxLength=8,\n",
+    "    autoFocus=True,\n",
+    "    size=\"medium\",\n",
+    ")\n",
+    "\n",
+    "input_integer = mdc.InputText(\n",
+    "    id=\"input-integer\",\n",
+    "    value=1,\n",
+    "    minValue=-100,\n",
+    "    maxValue=100,\n",
+    "    inputType=\"integer\",\n",
+    "    labelText=\"integer\"\n",
+    ")\n",
+    "\n",
+    "input_float = mdc.InputText(\n",
+    "    id=\"input-float\",\n",
+    "    value=2.5,\n",
+    "    minValue=-109.99,\n",
+    "    maxValue=209.99,\n",
+    "    inputType=\"float\",\n",
+    "    precision=3,\n",
+    "    labelText=\"float\"\n",
+    ")\n",
+    "\n",
+    "view_text = mdc.Typography(id=\"view-text\")\n",
+    "view_integer = mdc.Typography(id=\"view-integer\")\n",
+    "view_float = mdc.Typography(id=\"view-float\")\n",
+    "\n",
+    "box_51 = mdc.Box(children=[input_text, view_text])\n",
+    "box_52 = mdc.Box(children=[input_integer, view_integer])\n",
+    "box_53 = mdc.Box(children=[input_float, view_float])\n",
+    "\n",
+    "box_5 = mdc.Box(children=[box_51, box_52, box_53])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -135,12 +185,13 @@
     "# Dashboard layout\n",
     "\n",
     "tab = mdc.Tab(\n",
-    "    children=[box, box_2, box_3, box_4],\n",
+    "    children=[box, box_2, box_3, box_4, box_5],\n",
     "    tabs=[\n",
     "        {\"label\": \"Toggle\"},\n",
     "        {\"label\": \"Dropdown\"},\n",
     "        {\"label\": \"Calendar\"},\n",
     "        {\"label\": \"Slider\"},\n",
+    "        {\"label\": \"Text input\"}\n",
     "    ]\n",
     ")\n",
     "section = mdc.Section(\n",
@@ -157,10 +208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "extra-kenya",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://0.0.0.0:8001/\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Dash app\n",
     "\n",
@@ -203,8 +263,29 @@
     "def update_slider(value):\n",
     "    return value\n",
     "\n",
+    "@app.callback(\n",
+    "    Output(component_id='view-text', component_property='text'),\n",
+    "    Input(component_id='input-text', component_property='value'),\n",
+    ")\n",
+    "def update_input_text(value):\n",
+    "    return value\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=False)"
+    "@app.callback(\n",
+    "    Output(component_id='view-integer', component_property='text'),\n",
+    "    Input(component_id='input-integer', component_property='value'),\n",
+    ")\n",
+    "def update_integer(value):\n",
+    "    return value\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(component_id='view-float', component_property='text'),\n",
+    "    Input(component_id='input-float', component_property='value'),\n",
+    ")\n",
+    "def update_float(value):\n",
+    "    return value\n",
+    "\n",
+    "\n",
+    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001, debug=True)"
    ]
   },
   {
@@ -232,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
